--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ python:
   - 2.7
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox-travis
+install:
+    - pip install -r requirements_dev.txt
+script:
+    - flake8
+    - coverage run --source scumdoc_parser setup.py test
+after_success:
+    - coveralls
 
-# command to run tests, e.g. python setup.py test
-script: tox
 
 
